# ltl-actus

./: .gitignore  Cargo.toml  README.md  flake.nix  readme.org
.github/workflows/: nix.yml
actus/: Cargo.toml
actus/src/: event_types.rs  exec.rs  execution.rs  lib.rs  pam.rs
c/: .envrc  CHANGELOG  CMakeLists.txt  README.md  ltl-actus.1  readme.org
c/include/: logic.h  pam.h  state.h
c/src/: ltl-actus.c  state.c
cli/: Cargo.toml
cli/src/: main.rs
comms/january-2024-actus-workshop/: medium-article.org  readme.org  talk.md
comms/january-2024-deck/: README.md  presentation.org  presentation.pptx
comms/may-2024-actus-dc/: Makefile  readme.org  talk.md
examples/: loan-1.toml
lean/: .envrc  LtlActus.lean  Main.lean  lake-manifest.json  lakefile.lean
lean/LtlActus/: Basic.lean  Contracts.lean  LabeledTransitionSystem.lean  Logic.lean  Logic0.lean  Logic1.lean  Types.lean
lean/LtlModel/: Logic0.lean  TimeFFI.lean
lean/csrc/: time.c
ltl/: Cargo.toml
ltl-model/: LtlModel.lean  Main.lean
ltl-model/LtlModel/: Basic.lean  LabeledTransitionSystem.lean  Logic.lean  Logic0.lean  Logic1.lean  Time.lean
ltl/src/: lib.rs  logic.rs
nix/: format.nix  shells.nix
nix/cmake/: default.nix
nix/comms/: default.nix
nix/comms/january-2024-actus-workshop/: article.nix  talk.nix
nix/comms/may-2024-actus-dc/: talk.nix
nix/comms/whitepaper/: default.nix
nix/crates/: actus.nix  cli.nix  default.nix  ltl.nix
nix/model/: default.nix
rs/: .envrc  Prusti.toml  README.md  readme.org
rs/actus/src/: event_types.rs  execution.rs
rs/cli/: Cargo.toml
rs/ltl/: Prusti.toml
rs/ltl/src/: lib.rs  types.rs
tests/examples/: loan-2.toml
