[package]
name = "actus"
version = "0.0.1"
edition = "2021"

[dependencies]
ltl = { path = "../ltl" }
time = "0.3"
serde = { version = "1.0", features = ["derive"] }
fpdec = { version = "0.10", features = ["std", "serde-as-str", "num-traits"] }
log = "0.4"
simplelog = "0.12"
prusti-contracts = "0.2"
prusti-std = "0.2"

[dev-dependencies]
ctor = "0.2"
